<resources>
    <string name="app_name">Kaisendon</string>
    <string name="first_message">" Please enter your instance name (eg friends.nico)"</string>
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="login_nemu">Login</string>
    <string name="toot">Toot!</string>
    <string name="imananisiteru">Toot</string>
    <string name="public_time_line">Public TimeLine</string>
    <string name="user">User</string>
    <string name="nagaoshi_toot">Long Touch Toot!</string>
    <string name="nicoru">nicoru</string>
    <string name="setting">Setting</string>
    <string name="setting_mastodon_instance">Mastodon Instance</string>
    <string name="setting_mastodon_accesstoken">Mastodon AccessToken</string>
    <string name="setting_advance_setting">Advance Setting</string>
    <string name="setting_mastodon_instance_info">Instance Change</string>
    <string name="setting_mastodon_accesstoken_info">need AccessToken</string>
    <string name="setting_instance_change_info">Instance Change Option</string>
    <string name="setting_instance_change">Instance Change Option</string>
    <string name="setting_friends_nico_mode">friends.nico Mode Dissemble</string>
    <string name="setting_friends_nico_mode_info">nicoru dissemble etc</string>
    <string name="setting_app_theme">App Theme</string>
    <string name="setting_app_theme_dark_theme">Dark Theme</string>
    <string name="setting_app_theme_dark_theme_info">Dark Theme Change</string>
    <string name="setting_app_theme_oled_theme">OLED Theme</string>
    <string name="setting_app_theme_oled_theme_info">OLED Theme Change</string>
    <string name="confirmation">Confirmation</string>
    <string name="toot_dialog">Toot OK?</string>
    <string name="cancel">Cancel</string>
    <string name="setting_toot_dialog">Toot Dialog</string>
    <string name="setting_toot_dialog_info">Toot Dialog</string>
    <string name="setting_dialog">Dialog Setting</string>
    <string name="setting_timeline_toot_dialog">LimeTine Toot</string>
    <string name="setting_timeline_toot_dialog_info">TimeLine Toot Dialog</string>
    <string name="setting_nicoru_dialog">Favorite(nicoru) Dialog</string>
    <string name="setting_nicoru_dialog_info">Favorite(nicoru) Dialog</string>
    <string name="setting_boost_dialog">Boost Dialog</string>
    <string name="setting_boost_dialog_info">Boost Dialog</string>
    <string name="boost_button">Boost</string>
    <string name="dialog_boost">Dialog Boost</string>
    <string name="dialog_boost_info">Dialog Boost</string>
    <string name="dialog_favorite">Dialog Favotite</string>
    <string name="dialog_favorite_info">Dialog Favorite</string>
    <string name="dialog_nicoru">Dialog nicoru</string>
    <string name="dialog_nicoru_info">Dialog nicoru</string>
    <string name="boost_message">Boost :</string>
    <string name="setting_avater_get">Image Hidden</string>
    <string name="setting_avater_get_info">Data Sever</string>
    <string name="setting_no_sleep">Sleep Disable</string>
    <string name="setting_no_sleep_info">You can disable sleep</string>
    <string name="setting_no_sleep_timeline">Sleep Disable Pubic TimeLine</string>
    <string name="setting_no_sleep_timeline_info">TimeLine Sleep Disable</string>
    <string name="setting_avater_gif">Avater Gif</string>
    <string name="setting_avater_gif_info">Avater Gif Dissable</string>
    <string name="setting_font">Font Setting</string>
    <string name="setting_fontsize_timeline">Timeline FontSize</string>
    <string name="setting_fontsize_timeline_info">Timeline FontSize</string>
    <string name="setting_fontsize_user">Username Fontsize</string>
    <string name="setting_fontsize_user_info">Username Fontsize</string>
    <string name="setting_fontsize_client">ClientName Fontsize</string>
    <string name="setting_fontsize_client_info">ClientName Fontsize</string>
    <string name="notifications">Notifications</string>
    <string name="setting_font_color">Font Color</string>
    <string name="setting_font_color_info">Font Color</string>
    <string name="setting_font_color_toot_info">Font Color Toot</string>
    <string name="setting_font_color_toot">Font Color Toot</string>
    <string name="setting_font_color_client_info">Font Color Client</string>
    <string name="setting_font_color_client">Font Color Client</string>
    <string name="setting_fontcolor_theme">Theme FontColor</string>
    <string name="setting_fontcolor_theme_info">Theme FontColor</string>
    <string name="home">Home</string>
    <string name="Web">App</string>
    <string name="account">Account</string>
    <string name="follow">Follow</string>
    <string name="follower">Follower</string>
    <string name="setting_chrome_custom_tabs_info">Will it read faster?</string>
    <string name="setting_chrome_custom_tabs">Chrome Custom Tabs Enable</string>
    <string name="setting_avater_wifi_get_info">Avater Wi-Fi Connection</string>
    <string name="setting_avater_wifi_get">Wi-Fi get Avater</string>
    <string name="multipain_ui">Split timeline</string>
    <string name="setting_multipain_pannel_info">MultiPain Panel add 2 Panel</string>
    <string name="setting_multipain_pannel">MultiPain Ui Pannel</string>
    <string name="setting_follow_dialog_info">Follow Dialog</string>
    <string name="setting_follow_dialog">Follow Dialog</string>
    <string name="setting_drawer_avater_header_hidden_info">Drawer User Icon and Header Hidden</string>
    <string name="setting_drawer_avater_header_hidden">Mobile Deta Sever</string>
    <string name="login_button">login</string>
    <string name="second_message">Please Code</string>
    <string name="preference_button">Save</string>
    <string name="toot_text">Toot</string>
    <string name="setting_toot_media_hidden_info">Mobile Deta Save（Media Touch Show）</string>
    <string name="setting_toot_media_hidden">Toot Media Hidden</string>
    <string name="setting_button_icon_info">Button Icon Only</string>
    <string name="setting_button_icon">Button Icon Only</string>
    <string name="setting_emoji_compatibility">Emoji Compatibility</string>
    <string name="setting_emoji_compatibility_info">Android latest emoji(time lag)</string>
    <string name="setting_timeline">TimeLine Setting</string>
    <string name="setting_timeline_button">Timeline Button Hidden</string>
    <string name="setting_timeline_button_info">Timeline Button Hidden</string>
    <string name="menu">Menu</string>
    <string name="federated_timeline">Federated TimeLine</string>
    <string name="instance_info">Instance Info</string>
    <string name="setting_notification_info">App Lunch or Background Only</string>
    <string name="setting_notification">Notification Stream Toast</string>
    <string name="setting_notification_vibrate_info">Notification Vibrate</string>
    <string name="setting_notification_vibrate">Notification Vibrate</string>
    <string name="setting_notification_tile">Notification Setting</string>
    <string name="homecard">HomeCard</string>
    <string name="follow_suggestions">Follow Suggestions</string>
    <string name="favourite_list">Favourite List</string>
    <string name="bookmark">Bookmark</string>
    <string name="setting_bookmark_dialog_info">Bookmark Dialog Show?</string>
    <string name="setting_bookmark_dialog">Bookmark Dialog Show</string>
    <string name="setting_enquate_info">Enquate Dialog</string>
    <string name="setting_enquate">Enquate Dialog</string>
    <string name="setting_client_name_info">It is necessary to reacquire access token</string>
    <string name="setting_client_name">Client Name Change</string>
    <string name="account_chenge">Account Change</string>
    <string name="setting_cutom_emoji_info">It became usable</string>
    <string name="setting_custom_emoji">Enable custom emoticons</string>
    <string name="setting_networkchange_info">Notify by SnackBar when changing the network.</string>
    <string name="setting_networkchange">Notify network change</string>
    <string name="setting_timeFormat_check_info">You can customize time notation.</string>
    <string name="setting_timeFormat_text_info">Please input in Java date format.</string>
    <string name="setting_timeFormat_text">Enter date format</string>
    <string name="setting_time_add_info">Please enter the time to advance according to the time zone. (Initial: 9)</string>
    <string name="setting_time_add">Fit to the time zone</string>
    <string name="setting_subTitle_show_info">Display the account name and instance in the title bar subtitle.</string>
    <string name="setting_subTitle_show">Display account name etc in subtitle</string>
    <string name="setting_start_fragment_info">Please select what to display at startup.</string>
    <string name="setting_start_fragment">Change the screen displayed at startup</string>
    <string name="custom_streaming">Custom Streaming</string>
    <string name="setting_multipain_upper_right">Change upper right (left) screen</string>
    <string name="setting_multipain_upper_right_info">You can change the screen in the upper right (left).</string>
    <string name="custom_streaming_setting">Custom Streaming Settings</string>
    <string name="setting_custom_streaming_home_color">Set the background color of the home timeline</string>
    <string name="setting_custom_streaming_notification_color">Set background color of notification</string>
    <string name="setting_custom_streaming_local_color">Set the background color of the local timeline</string>
    <string name="setting_custom_streaming_color_message">Please enter in color code. Transparency can be used by adding after #. (Initial value: home # 1Aff0000, notification 1A008000, local 1A0000ff)</string>
    <string name="setting_one_hand_mode_title">One Hand Mode</string>
    <string name="setting_one_hand_mode_message">Replace the dialog with a snack bar.</string>
    <string name="license">License</string>
    <string name="direct_message">DirectMessage</string>
    <string name="setting_svg_animation_title">Disable SVG animation</string>
    <string name="setting_svg_animation_message">Disable SVG animation (There is no problem even if it is disabled).</string>
    <string name="setting_use_streamingapi_title">Use the Streaming API</string>
    <string name="setting_use_streamingapi_message">New Toot will be loaded in real time.</string>
    <string name="setting_notification_timeline_title">Notification timeline timeline change</string>
    <string name="setting_notification_timeline_message">You can change the acquisition timeline.</string>
    <string name="widget_setting">Widget settings</string>
    <string name="setting_widget_load_message">Timeline to read with widget TL</string>
    <string name="setting_widget_load_title">Please select the timeline to read with widget TL.</string>
    <string name="konoappnituite">About this application</string>
    <string name="device_name">Device name</string>
    <string name="android_version">Android Version</string>
    <string name="maker">Maker</string>
    <string name="sdk_version">SDK Version</string>
    <string name="codename">Code name</string>
    <string name="battery_level">Battery Level</string>
    <string name="custom_menu_mode">Enable or disable Custom Menu</string>
    <string name="scheduled_statuses">Timed Post (Reserved Post / scheduled_statuses) Waiting List</string>
    <string name="hash_tag_tl_local">Hashtag TL (Local)</string>
    <string name="hash_tag_tl_public">Hasttag TL (Public)</string>
</resources>