<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/custom_menu_load_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/home"></item>
    <item
        android:id="@+id/custom_menu_load_notification"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/notifications"></item>
    <item
        android:id="@+id/custom_menu_load_local"
        android:icon="@drawable/ic_train_black_24dp"
        android:title="@string/public_time_line"></item>
    <item
        android:id="@+id/custom_menu_load_federated"
        android:icon="@drawable/ic_flight_black_24dp"
        android:title="@string/federated_timeline"></item>
    <item
        android:id="@+id/custom_menu_load_direct"
        android:icon="@drawable/ic_assignment_ind_black_24dp"
        android:title="@string/direct_message"></item>
    <item
        android:id="@+id/custom_menu_load_scheduled_statuses"
        android:icon="@drawable/ic_access_alarm_black_24dp"
        android:title="@string/scheduled_statuses"></item>
    <item
        android:id="@+id/custom_menu_load_favourite_list"
        android:icon="@drawable/ic_star_black_24dp"
        android:title="@string/favourite_list"></item>
    <item
        android:id="@+id/custom_menu_load_follow_suggestions"
        android:icon="@drawable/ic_person_add_black_24dp"
        android:title="@string/follow_suggestions"></item>
    <item
        android:id="@+id/custom_menu_load_hastag_tl_local"
        android:icon="@drawable/ic_label_outline_black_24dp"
        android:title="@string/hash_tag_tl_local"></item>
    <item
        android:id="@+id/custom_menu_load_hastag_tl_public"
        android:icon="@drawable/ic_label_outline_black_24dp"
        android:title="@string/hash_tag_tl_public"></item>

</menu>